# python_smit

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/application/api/: dependencies.py  main.py
app/application/api/insurance/: handlers.py  schemas.py
app/application/api/rates/: handlers.py  schemas.py
app/domain/entites/: log.py  rate.py  rate_filters.py  rate_update.py
app/domain/exceptions/: base.py
app/domain/value_objects/: insurance_params.py
app/infra/repositories/exceptions/: rate.py
app/infra/repositories/models/: db.py  rate.py
app/infra/repositories/rate/: base.py  conventers.py  orm.py
app/logic/: __init__.py
app/logic/services/: kafka_test_producer.py
app/logic/services/insurance_service/: base.py  insurance.py
app/logic/services/logger_service/: base.py  kafka.py
app/logic/services/rate_service/: base.py  rate.py
app/logic/use_cases/insurance/: calculate_cost.py
app/logic/use_cases/rates/: create.py  delete.py  get.py  update.py
app/settings/: config.py
docker_compose/: app.yml  kafka.yml  storage.yml
